# tink-java-awskms

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  index.html  tink_java_awskms_deps.bzl
examples/maven/: README.md  pom.xml
examples/maven/src/main/java/com/helloworld/: HelloWorld.java
javadoc/tink-awskms/1.10.0/com/google/crypto/tink/integration/awskms/: AwsKmsClient.html
javadoc/tink-awskms/1.8.0/com/google/crypto/tink/integration/awskms/: AwsKmsClient.html
javadoc/tink-awskms/1.9.0/com/google/crypto/tink/integration/awskms/: AwsKmsClient.html
javadoc/tink-awskms/HEAD/: allclasses-frame.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-search-index.js
javadoc/tink-awskms/HEAD-SNAPSHOT/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  member-search-index.js  overview-tree.html  type-search-index.js
javadoc/tink-awskms/HEAD-SNAPSHOT/com/google/crypto/tink/integration/awskms/: AwsKmsAead.html  AwsKmsClient.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/tink-awskms/HEAD-SNAPSHOT/com/google/crypto/tink/integration/awskms/class-use/: AwsKmsAead.html  AwsKmsClient.html
javadoc/tink-awskms/HEAD/com/google/crypto/tink/integration/awskms/: AwsKmsAead.html  AwsKmsClient.html
javadoc/tink-awskms/HEAD/com/google/crypto/tink/integration/awskms/class-use/: AwsKmsAead.html  AwsKmsClient.html
kokoro/: create_github_release_branch.sh  create_github_release_tag.sh  release_github.sh  release_maven.sh
kokoro/gcp_ubuntu/bazel/: run_tests.sh
kokoro/gcp_ubuntu/maven/: run_tests.sh
kokoro/macos_external/bazel/: run_tests.sh
kokoro/testutils/: github_release_util_test.sh
maven/: maven_deploy_library_test.sh  tink-java-awskms.pom.xml
src/main/java/com/google/crypto/tink/integration/awskms/: AwsKmsAead.java  AwsKmsClient.java  BUILD.bazel  FakeAwsKms.java
src/test/java/com/google/crypto/tink/integration/awskms/: AwsKmsAeadTest.java  AwsKmsClientTest.java  AwsKmsIntegrationTest.java  BUILD.bazel  FakeAwsKmsTest.java
testdata/aws/: README.md
tools/: build_maven_bundle.sh  create_maven_build_file.sh
