load("//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["BUILD"])

# Maven jars.
# DO NOT USE FOR ANY OTHER PURPOSES.

gen_maven_jar_rules(
    name = "tink-awskms",
    doctitle = "Tink Cryptography API with AWS KMS",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.integration.awskms",
    ],
    root_packages = [
        "com.google.crypto.tink.integration.awskms",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_aead",
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_client",
    ],
)
