# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################

module(name = "tink_java_awskms", version = "1.11.0")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_android", version = "0.6.6", repo_name = "build_bazel_rules_android")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "tink_java")
archive_override(
    module_name = "tink_java",
    integrity = "sha256-KodHYV+34hNasUl6GqkqgvRiRl4gYI39UtBfM3n2850=",
    strip_prefix = "tink-java-1.19.0",
    urls = ["https://github.com/tink-crypto/tink-java/archive/refs/tags/v1.19.0.tar.gz"],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        # go/keep-sorted start
        "com.amazonaws:aws-java-sdk-core:1.12.779",
        "com.amazonaws:aws-java-sdk-kms:1.12.779",
        "com.google.auto.service:auto-service-annotations:1.1.1",
        "com.google.auto.service:auto-service:1.1.1",
        "com.google.auto:auto-common:1.2.2",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.errorprone:error_prone_annotations:2.36.0",
        "com.google.guava:guava:33.3.1-jre",
        "com.google.truth:truth:1.4.4",
        "junit:junit:4.13.2",
        "org.ow2.asm:asm-commons:9.7.1",
        "org.ow2.asm:asm:9.7.1",
        "org.pantsbuild:jarjar:1.7.2",
        # go/keep-sorted end
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    known_contributing_modules = ["bazel_worker_java", "protobuf", "tink_java", "tink_java_awskms"]
)

use_repo(maven, "maven")
