licenses(["notice"])

package(default_visibility = ["//visibility:public"])

java_library(
    name = "aws_kms_aead",
    srcs = ["AwsKmsAead.java"],
    deps = [
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_guava_guava",
        "@maven//:software_amazon_awssdk_auth",
        "@maven//:software_amazon_awssdk_kms",
        "@maven//:software_amazon_awssdk_regions",
        "@maven//:software_amazon_awssdk_sdk_core",
        "@maven//:software_amazon_awssdk_utils",
    ],
)

java_library(
    name = "aws_kms_client",
    srcs = ["AwsKmsClient.java"],
    plugins = [":auto_service_plugin"],
    deps = [
        ":aws_kms_aead",
        "@maven//:com_google_auto_service_auto_service_annotations",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:software_amazon_awssdk_auth",
        "@maven//:software_amazon_awssdk_kms",
        "@maven//:software_amazon_awssdk_profiles",
        "@maven//:software_amazon_awssdk_regions",
        "@maven//:software_amazon_awssdk_sdk_core",
    ],
)

java_library(
    name = "fake_aws_kms",
    testonly = 1,
    srcs = ["FakeAwsKms.java"],
    deps = [
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:software_amazon_awssdk_kms",
        "@maven//:software_amazon_awssdk_sdk_core",
    ],
)

java_plugin(
    name = "auto_service_plugin",
    processor_class = "com.google.auto.service.processor.AutoServiceProcessor",
    deps = [
        "@maven//:com_google_auto_auto_common",
        "@maven//:com_google_auto_service_auto_service",
    ],
)
