licenses(["notice"])

java_test(
    name = "AwsKmsAeadTest",
    size = "small",
    srcs = ["AwsKmsAeadTest.java"],
    deps = [
        "@tink_java//src/main/java/com/google/crypto/tink:aead",
        "@tink_java//src/main/java/com/google/crypto/tink/aead:aead_config",
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_aead",
        "//src/main/java/com/google/crypto/tink/integration/awskms:fake_aws_kms",
        "@tink_java//src/main/java/com/google/crypto/tink/subtle:random",
        "@maven//:com_amazonaws_aws_java_sdk_kms",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "AwsKmsClientTest",
    size = "small",
    srcs = ["AwsKmsClientTest.java"],
    deps = [
        "@tink_java//src/main/java/com/google/crypto/tink:kms_client",
        "@tink_java//src/main/java/com/google/crypto/tink:kms_clients",
        "@tink_java//src/main/java/com/google/crypto/tink:kms_clients_test_util",
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_client",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "FakeAwsKmsTest",
    size = "small",
    srcs = ["FakeAwsKmsTest.java"],
    deps = [
        "@tink_java//src/main/java/com/google/crypto/tink/aead:aead_config",
        "//src/main/java/com/google/crypto/tink/integration/awskms:fake_aws_kms",
        "@maven//:com_amazonaws_aws_java_sdk_core",
        "@maven//:com_amazonaws_aws_java_sdk_kms",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
