licenses(["notice"])

java_test(
    name = "AwsKmsAeadTest",
    size = "small",
    srcs = ["AwsKmsAeadTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_aead",
        "//src/main/java/com/google/crypto/tink/integration/awskms:fake_aws_kms",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:software_amazon_awssdk_kms",
    ],
)

java_test(
    name = "AwsKmsClientTest",
    size = "small",
    srcs = ["AwsKmsClientTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_client",
        "//src/main/java/com/google/crypto/tink/integration/awskms:fake_aws_kms",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "AwsKmsIntegrationTest",
    size = "small",
    srcs = ["AwsKmsIntegrationTest.java"],
    data = ["//testdata/aws:credentials"],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_client",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "FakeAwsKmsTest",
    size = "small",
    srcs = ["FakeAwsKmsTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/awskms:fake_aws_kms",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:software_amazon_awssdk_kms",
        "@maven//:software_amazon_awssdk_sdk_core",
    ],
)
